# who-the-chess

./: Cargo.toml  Dockerfile  README.md
assets/: game.css  htmx-response-targets.js
html/: base.html  game.html  logic.js  playarea.html  prediction.html  result.html
html/game/: game.html  playarea.html  prediction.html
html/introduction/: introduction.html
html/result/: result.html
resources/: creator-and-wcc-dump.json  player-data-removed.json  player-data.json  readme.md
src/backend/: main.rs
src/data-processing/: main.rs
src/schema-creator/: main.rs
src/sqlite-generator/: main.rs
