[package]
name = "chessle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[[bin]]
name = "sqlite-generator"
path = "src/sqlite-generator/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["query"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = "1.0"
rand = "0.8"
chrono = "0.4"
