[package]
name = "chessle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["query"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = "1.0"
chrono = "0.4"
include_dir = "0.7"
mime_guess = "2.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"], optional = true}

[features]
build-sqlx = ["sqlx"]

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[[bin]]
name = "data-processing"
path = "src/data-processing/main.rs"

[[bin]]
name = "schema-creator"
path = "src/schema-creator/main.rs"
required-features = ["build-sqlx"]
